--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="str_txt_release_date">Release Date</string>
     <string name="str_txt_rate">Rating</string>
     <string name="str_txt_videos">Videos</string>
+    <string name="str_alert_load">Loading movies...</string>
+    <string name="str_alert_error_title">Error</string>
+    <string name="str_alert_rto">Request time out</string>
+    <string name="str_alert_404">Not found</string>
+    <string name="str_alert_500">Internal server error</string>
+    <string name="str_alert_net">Please check your internet connection</string>
 </resources>
